[fix]修复Scrollbar的问题

--- a/src/components/Scrollbar/style/scrollbar.less
+++ b/src/components/Scrollbar/style/scrollbar.less
@@ -95,6 +95,9 @@
         background-color: rgb(134, 144, 156);
         opacity: 0.8;
       }
+      &.yc-scrollbar-thumb-bar-hover {
+        opacity: 1;
+      }
     }
   }
 }
